# texteditor

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
.github/: review-persona.md
.github/workflows/: ci.yml  claude-review.yml
scripts/: coverage.sh
src/buffer/: buffer.cpp  buffer.hpp
tests/: memory_utils.hpp  utils.hpp
tests/buffer/: buffer_test.cpp
